--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,7 @@
     "name": "TabCycle",
     "version": "2.0.0",
     "description": "Cycles through open tabs at a set time interval, and schedules tabs to open at specific dates/times, with per-tab scheduling.",
-    "permissions": ["storage", "alarms", "tabs", "scripting"],
-    "host_permissions": ["<all_urls>"],
+    "permissions": ["storage", "alarms", "tabs"],
     "background": {
         "service_worker": "background.js"
     },
@@ -21,12 +20,6 @@
         "page": "options.html",
         "open_in_tab": true
     },
-    "web_accessible_resources": [
-        {
-        "resources": ["styles.css"],
-        "matches": ["<all_urls>"]
-        }
-    ],
     "options_page": "options.html",
     "icons": {
         "16": "icons/icon16.png",
