--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "TabCycle",
-    "version": "2.3.7",
+    "version": "2.4.0",
     "default_locale": "en",
     "description": "Cycles through open tabs at a set time interval, and schedules tabs to open at specific dates/times, with per-tab scheduling.",
     "permissions": ["storage", "alarms", "tabs"],
@@ -26,5 +26,9 @@
         "16": "icons/play16.png",
         "48": "icons/play48.png",
         "128": "icons/play128.png"
-  }
+    },
+    "web_accessible_resources": [{
+        "resources": ["dist/*"],
+        "matches": ["<all_urls>"]
+    }]
 }
