--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 3,
-    "name": "TabCycle",
-    "version": "2.4.3",
+    "name": "TabCycle - Auto-Rotate Tabs for Dashboards and Wallboard Displays",
+    "version": "2.4.4",
     "default_locale": "en",
-    "description": "Cycles through open tabs at a set time interval, and schedules tabs to open at specific dates/times, with per-tab scheduling.",
+    "description": "Automatically switches browser tabs at a time of your choice, and schedules URLs to open at specific dates/times.",
     "permissions": ["storage", "alarms", "tabs"],
     "background": {
         "service_worker": "background.js"
